# ECG-anomaly-detection-FPGA

./: .gitignore  README.md
data/: sample_info.txt  target_VS_outcome.xlsx  target_VS_outcome_v2.xlsx  ~$target_VS_outcome_v2.xlsx
data/labels/: fs_X_test.npy  fs_X_train.npy  fs_X_val.npy  fs_ids_test.npy  fs_ids_train.npy  fs_ids_val.npy  fs_y_test.npy  fs_y_train.npy  fs_y_val.npy  show_label.py
data/processed/: show_label.py  y.npy  y_test.npy  y_train.npy  y_val.npy
data/raw/: #SUPPORT.txt  extension explaination.txt
gui/: ecg_gui_test.py
hw_vitis/ecg_cnn_package/: component.xml
hw_vitis/ecg_cnn_package_v2/: component.xml
hw_vivado/bitstream/: bitstream.xsa  bitstream2.xsa
hw_vivado/ecg_cnn_bd/: dfx_runtime.txt  ecg_cnn_bd.xpr  nexys4.xdc  vivado.jou  vivado_19364.backup.jou  vivado_20896.backup.jou  vivado_pid4536.str  vivado_pid6820.str
hw_vivado/ecg_cnn_bd/ecg_cnn_bd.ip_user_files/sim_scripts/system_bd/modelsim/: CMakeLists.txt  Makefile  compile.do  simulate.do  system_bd.sh  system_bd_blk_mem_gen_0_1.mem
ml/: build_dataset.py  cnn_export.py  cnn_model.py
ml/additional_tried_models/: perceptron.py  regression.py  svm.py
ml/exported_model/: cnn_config.json  cnn_model.h5  cnn_model_improved.h5  conv1d_1_biases.mem  conv1d_1_weights.mem  conv1d_biases.mem  conv1d_weights.mem  dense1_biases.mem  dense1_weights.mem  dense2_weights.mem  make_weights_rom.py  (+2 more)
notebooks/: egc_proj2_one_window.ipynb  egc_project0.ipynb  egc_work_on_all_windows_of_ALL_record.ipynb  egc_work_on_all_windows_of_one_record.ipynb  processed_data.ipynb.ipynb
(+1347 files in other folders)
